Update tipografia y favicon

--- a/assets/css/_commons.scss
+++ b/assets/css/_commons.scss
@@ -3,6 +3,4 @@ $colores:(
     gradient_2: #3BB78F,
     color_background: #0BAB64,
 );
-$tipografias:(
-    tipografia_principal:'Silkscreen', cursive,
-);
+    $tipografia_principal: 'Yanone Kaffeesatz', sans-serif;
