--- a/assets/css/_content.scss
+++ b/assets/css/_content.scss
@@ -1,6 +1,5 @@
 @use '_commons' as c;
-@import url('https://fonts.googleapis.com/css2?family=Anek+Devanagari:wght@300&family=Silkscreen&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz&display=swap');
 .contenido{
     background: linear-gradient(map-get(c.$colores,"gradient_1"), map-get(c.$colores,"gradient_2"));
     font-size: 24px;
@@ -8,19 +7,23 @@
 }
 .navbarbg{
     background-color: map-get(c.$colores,"color_background");
-    font-family: map-get(c.$tipografias, "tipografia_principal");
+    font-family: c.$tipografia_principal;
+    font-size: 24px;
 }
 .bgcontent{
-    font-family: map-get(c.$tipografias, "tipografia_principal");
+    font-family: c.$tipografia_principal;
+    font-size: 24px;
 }
 
 .text-center{
-    font-family: map-get(c.$tipografias, "tipografia_principal");
+    font-family: c.$tipografia_principal;
+    font-size: 24px;
 }
 .mb-3{
     text-align: center;
     margin-left: 30%;
     margin-right: 30%;
+    font-size: 24px;
 }
 .table{
     text-align: center;
