--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Anek+Devanagari:wght@300&family=Silkscreen&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz&display=swap");
 .contenido {
   background: linear-gradient(#0BAB64, #3BB78F);
   font-size: 24px;
@@ -7,21 +7,25 @@
 
 .navbarbg {
   background-color: #0BAB64;
-  font-family: "Silkscreen", cursive;
+  font-family: "Yanone Kaffeesatz", sans-serif;
+  font-size: 24px;
 }
 
 .bgcontent {
-  font-family: "Silkscreen", cursive;
+  font-family: "Yanone Kaffeesatz", sans-serif;
+  font-size: 24px;
 }
 
 .text-center {
-  font-family: "Silkscreen", cursive;
+  font-family: "Yanone Kaffeesatz", sans-serif;
+  font-size: 24px;
 }
 
 .mb-3 {
   text-align: center;
   margin-left: 30%;
   margin-right: 30%;
+  font-size: 24px;
 }
 
 .table {
