--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -20,7 +20,9 @@
   font-family: "Yanone Kaffeesatz", sans-serif;
   font-size: 24px;
 }
-
+.logotipo {
+  font-size: 48px;
+}
 .mb-3 {
   text-align: center;
   margin-left: 30%;
