--- a/assets/css/_commons.scss
+++ b/assets/css/_commons.scss
@@ -4,3 +4,4 @@ $colores:(
     color_background: #0BAB64,
 );
     $tipografia_principal: 'Yanone Kaffeesatz', sans-serif;
+    $tipografia_secundaria: 'Silkscreen', cursive;
