--- a/assets/css/_commons.scss
+++ b/assets/css/_commons.scss
@@ -1,7 +1,8 @@
 $colores:(
     gradient_1: #0BAB64,
     gradient_2: #3BB78F,
-    color_background: #0BAB64,
+    color_background: #0CA360,
+    color_footer: #37AE88,
 );
     $tipografia_principal: 'Yanone Kaffeesatz', sans-serif;
     $tipografia_secundaria: 'Silkscreen', cursive;
